              link diagrams with fewer than 64 link components.
            - Routine hasReducingPass() can now handle multiple-component links.
            - Added a variant of translate() that takes crossings instead of
              strand references.
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.
            - Routine selfFrame() now returns a boolean indicating whether
              anything changed.
            - Routine simplifyExhaustive() now ensures that any change to the
              link diagram happens on the calling thread.
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Manifold:
            - Added a spaceship operator (<=>) for aesthetic comparisons.
              This has the effect of implementing all comparison operators,
              not just less-than (<) as before.
        Class MarkedVector<T>:
            - New routine shuffle().
        Class Matrix<T>: