@@ -5322,9 +5322,6 @@ class Link :
          * \exception InvalidArgument The given string was not a valid
          * Dowker-Thistlethwaite code for a classical knot.
          *
-         * \author Much of the code for this routine is based on the
-         * Dowker-Thistlethwaite implementation in the SnapPea/SnapPy kernel.
-         *
          * \param str either the alphabetical or numerical
          * Dowker-Thistlethwaite notation for a classical knot, as described
          * above.
@@ -5369,9 +5366,6 @@ class Link :
          *
          * \python Instead of a pair of begin and past-the-end
          * iterators, this routine takes a Python list of integers.
-         *
-         * \author Much of the code for this routine is based on the
-         * Dowker-Thistlethwaite implementation in the SnapPea/SnapPy kernel.
          *
          * \param begin an iterator that points to the beginning of the
          * sequence of integers for the Dowker-Thistlethwaite notation
@@ -5593,31 +5587,6 @@ class Link :
          */
         static bool parseOrientedGaussTerm(const char* s,
             size_t nCross, size_t& crossing, int& strand, int& sign);
-
-        /**
-         * Internal to fromDT().
-         *
-         * This routine attempts to deduce the orientation of each crossing
-         * in order to make a planar embedding of the 4-valent graph
-         * described by the Dowker-Thistlethwaite notation.
-         *
-         * See the source code for further documentation.
-         *
-         * \return \c true if and only if a planar embedding was found.
-         *
-         * \author This routine is based on the Dowker-Thistlethwaite
-         * implementation from the SnapPea/SnapPy kernel.
-         */
-        static bool realizeDT(const FixedArray<size_t>& anInvolution,
-            FixedArray<bool>& aRealization, size_t aNumCrossings);
-
-        /**
-         * Converts Dowker-Thistlethwaite notation directly into a classical
-         * Gauss code, without making any attempt to reconstruct the link
-         * diagram.
-         */
-        template <typename Iterator>
-        static FixedArray<int> gaussFromDT(Iterator begin, Iterator end);
 
         /**
          * Internal to fromData().
